--- a/we-deal-cars/frontend/pages/login.html
+++ b/we-deal-cars/frontend/pages/login.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <h1>Login</h1>
+
     <form id="loginForm">
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+        
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 10px;">
+            <button type="submit">Login</button>
+            <a href="register.html" style="margin-left: 15px;">Create Account</a>
+        </div>
     </form>
-    <a href="register.html">Create Account</a>
+
     <script src="../js/script.js"></script>
 </body>
 </html>
