--- a/we-deal-cars/frontend/pages/register.html
+++ b/we-deal-cars/frontend/pages/register.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <h1>Register</h1>
+
     <form id="registerForm">
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Password" required>
         <input type="text" name="mobile" placeholder="Mobile No">
         <input type="text" name="address" placeholder="Address">
-        <button type="submit">Register</button>
+        
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 10px;">
+            <button type="submit">Register</button>
+            <a href="login.html" style="margin-left: 15px;">Login</a>
+        </div>
     </form>
-    <a href="login.html">Login</a>
+
     <script src="../js/script.js"></script>
 </body>
 </html>
