Bug fixes my-cars

--- a/we-deal-cars/frontend/pages/sell-car.html
+++ b/we-deal-cars/frontend/pages/sell-car.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Sell My Car</h1>
+    <nav>
+        <a href="sell-car.html">Sell My Car</a>
+        <a href="buy-car.html">Buy a Car</a>
+        <a href="my-cars.html">My Cars</a>
+        <button onclick="logout()" style="margin-left: 20px;">Logout</button>
+    </nav>
     <form id="sellCarForm">
         <input type="text" name="model" placeholder="Car Model" required>
         <input type="number" name="price" placeholder="Price" required>
