--- a/we-deal-cars/frontend/pages/admin.html
+++ b/we-deal-cars/frontend/pages/admin.html
@@ -11,6 +11,7 @@
     <nav>
         <a href="#manage-users">Manage Users</a>
         <a href="#manage-cars">Manage Cars</a>
+        <button onclick="logout()" style="margin-left: 20px;">Logout</button>
     </nav>
 
     <!-- Manage Users Section -->
