--- a/we-deal-cars/frontend/pages/buy-car.html
+++ b/we-deal-cars/frontend/pages/buy-car.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Buy a Car</h1>
+    <nav>
+        <a href="sell-car.html">Sell My Car</a>
+        <a href="buy-car.html">Buy a Car</a>
+        <a href="my-cars.html">My Cars</a>
+        <button onclick="logout()" style="margin-left: 20px;">Logout</button>
+    </nav>
     <form id="filterForm">
         <input type="text" name="model" placeholder="Search by Model">
         <input type="number" name="minPrice" placeholder="Min Price">
