--- a/we-deal-cars/frontend/index.html
+++ b/we-deal-cars/frontend/index.html
@@ -5,10 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>We Deal Cars</title>
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            height: 100vh;
+            margin: 0;
+            display: flex;
+            overflow: hidden;
+            font-family: 'Arial', sans-serif;
+        }
+
+        .left, .right {
+            flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .left {
+            background: url('images/car-sale.jpg') no-repeat center center/cover;
+        }
+
+        .right {
+            background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+            flex-direction: column;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .right h1 {
+            margin-bottom: 30px;
+            font-size: 3rem;
+            color: #333;
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 20px;
+        }
+
+        .btn-group a {
+            text-decoration: none;
+            background: linear-gradient(90deg, #4facfe, #00f2fe);
+            padding: 12px 25px;
+            color: #fff;
+            font-size: 1.2rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, background 0.3s ease;
+        }
+
+        .btn-group a:hover {
+            transform: translateY(-3px);
+            background: linear-gradient(90deg, #00f2fe, #4facfe);
+        }
+        .left-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0; /* Remove border-radius if you want full fit */
+}
+    </style>
 </head>
 <body>
-    <h1>Welcome to We Deal Cars</h1>
-    <a href="pages/login.html">Login</a>
-    <a href="pages/register.html">Register</a>
+    <div class="left">
+        <img src="https://img.freepik.com/free-photo/car-headlight-couple-making-deal-with-car-dealer_651396-1187.jpg?t=st=1745844535~exp=1745848135~hmac=4510624508ee393b51331a0164b7e37f829ba6b947427709366face3f308d449&w=1800" alt="Car for Sale" style="width: 90%; height: auto; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+    </div>
+
+    <div class="right">
+        <h1>We Deal Cars</h1>
+        <div class="btn-group">
+            <a href="pages/login.html">Login</a>
+            <a href="pages/register.html">Register</a>
+        </div>
+    </div>
 </body>
 </html>
